<resources>
    <string name="app_name">Awesome-neumorphism</string>

    <string name="action_settings">Settings</string>
    <string name="stdCal">Standard Calculator</string>
    <string name="sciCal">Scientific Calculator</string>
    <string name="unitCal">Unit Converter</string>
    <string name="FullCal">Calculator App</string>
    <string name="title_activity_standard_cal">StandardCal</string>
    <string name="title_activity_scientific_cal">ScientificCal</string>
    <string name="title_activity_unit_coverter">UnitCoverter</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="cuberoot">\u221B</string>
    <string name="square">x²</string>
    <string name="cube">x\u00B3</string>
    <string name="tenpow">10\u207F</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="title_activity_unit_area">UnitArea</string>
    <string name="title_activity_unit_length">UnitLength</string>
    <string name="title_activity_unit_weight">UnitWeight</string>
    <string name="title_activity_unit_temperature">UnitTemperature</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="history">History</string>
</resources>
